--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             alt="Practicum Coffee Shop Logo"
             class="logo"
           />
-          <div class="nav__links">
+          <ul class="nav__links">
             <li><a class="nav__link" href="#menu">Menu</a></li>
             <li><a class="nav__link" href="#recipes">Recipes</a></li>
             <li><a class="nav__link" href="#reservations">Book a table</a></li>
             <li><a class="nav__link" href="#about">Contacts</a></li>
-          </div>
+          </ul>
         </nav>
         <h1 class="header__title">
           <span class="header__span-accent"> Specialty coffee</span>
@@ -94,71 +94,69 @@
                   <div class="card__list-divider"></div>
                   $1.25
                 </li>
-                </ul>
-          </div>
-              <div class="card">
-                <h3 class="card__title">Espresso</h3>
-                <ul class="card__list">
-                  <li class="card__list-item">
-                    Macchiato
-                    <div class="card__list-divider"></div>
-                    $2.25
-                  </li>
-                  <li class="card__list-item">
-                    Cortado
-                    <div class="card__list-divider"></div>
-                    $2.5
-                  </li>
-                  <li class="card__list-item">
-                    Mocha
-                    <div class="card__list-divider"></div>
-                    $3
-                  </li>
-                  <li class="card__list-item">
-                    Sunrise in the Bay Area (decaf)
-                    <div class="card__list-divider"></div>
-                    $10
-                  </li>
-                </ul>
-              </div>
-                <div class="card">
-                <h3 class="card__title">Baked Goods</h3>
-                <ul class="card__list">
-                  <li class="card__list-item">
-                    Almond Croissant
-                    <div class="card__list-divider"></div>
-                    $2
-                  </li>
-                  <li class="card__list-item">
-                    Banana bread
-                    <div class="card__list-divider"></div>
-                    $1.75
-                  </li>
-                  <li class="card__list-item">
-                    Key Lime Pie
-                    <div class="card__list-divider"></div>
-                    $3
-                  </li>
-                  <li class="card__list-item">
-                    Blue Velvet Cake
-                    <div class="card__list-divider"></div>
-                    $3.75
-                  </li>
-                  <li class="card__list-item">
-                    Web Cookie
-                    <div class="card__list-divider"></div>
-                    $2
-                  </li>
-                  <li class="card__list-item">
-                    Fresh Bug'uette
-                    <div class="card__list-divider"></div>
-                    $0.25
-                  </li>
-                </ul>
-                </div>
               </ul>
             </div>
-          
+            <div class="card">
+              <h3 class="card__title">Espresso</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Macchiato
+                  <div class="card__list-divider"></div>
+                  $2.25
+                </li>
+                <li class="card__list-item">
+                  Cortado
+                  <div class="card__list-divider"></div>
+                  $2.5
+                </li>
+                <li class="card__list-item">
+                  Mocha
+                  <div class="card__list-divider"></div>
+                  $3
+                </li>
+                <li class="card__list-item">
+                  Sunrise in the Bay Area (decaf)
+                  <div class="card__list-divider"></div>
+                  $10
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3 class="card__title">Baked Goods</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Almond Croissant
+                  <div class="card__list-divider"></div>
+                  $2
+                </li>
+                <li class="card__list-item">
+                  Banana bread
+                  <div class="card__list-divider"></div>
+                  $1.75
+                </li>
+                <li class="card__list-item">
+                  Key Lime Pie
+                  <div class="card__list-divider"></div>
+                  $3
+                </li>
+                <li class="card__list-item">
+                  Blue Velvet Cake
+                  <div class="card__list-divider"></div>
+                  $3.75
+                </li>
+                <li class="card__list-item">
+                  Web Cookie
+                  <div class="card__list-divider"></div>
+                  $2
+                </li>
+                <li class="card__list-item">
+                  Fresh Bug'uette
+                  <div class="card__list-divider"></div>
+                  $0.25
+                </li>
+              </ul>
+            </div>
+          </div>
         </section>
 
         <section class="recipes" id="recipes">
@@ -221,12 +219,7 @@
               </label>
               <label for="date" class="form__label">
                 Date & time *
-                <input
-                  id="date"
-                  class="form__input"
-                  type="datetime-local"
-                  placeholder="mm/dd/yyyy --:-- --"
-                />
+                <input id="date" class="form__input" type="datetime-local" />
               </label>
               <label for="email" class="form__label">
                 Your email *
