--- a/index.html
+++ b/index.html
@@ -198,11 +198,12 @@
         </section>
         <section class="reservation" id="reservations">
           <h2 class="reservation__title">Book a table</h2>
-          <form class="reservation__form">
+          <form class="reservation__form form">
             <fieldset class="form__fieldset">
               <label for="name" class="form__label">
                 Name *
                 <input
+                  type="text"
                   id="name"
                   class="form__input"
                   placeholder="Name Surname"
@@ -230,10 +231,9 @@
                   placeholder="email@email.com"
                 />
               </label>
-            </fieldset>
-            <fieldset class="form__fieldset">
               <button class="form__button" type="submit">Book a Table</button>
             </fieldset>
+            <fieldset class="form__fieldset"></fieldset>
             <fieldset class="form__fieldset">
               <label class="form__label form__label_type_checkbox">
                 <input type="checkbox" class="form__checkbox" />
