--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="recipes__videos">
             <div class="recipes__video">
               <iframe
-                class="recipe__iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 allowfullscreen
               >
@@ -184,7 +184,7 @@
             </div>
             <div class="recipes__video">
               <iframe
-                class="recipe__iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 allowfullscreen
               >
