--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta name="keywords" content="coffee, Practicum, CSS, HTML, code" />
     <meta name="description" content="Practicum Cafe landing page" />
     <meta name="autho" content="Austin Pendleton" />
@@ -13,6 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="icon" href="./favicon.ico" />
   </head>
   <body>
     <div class="page">
